Fix radio buttons are not vertically aligned in center

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -636,6 +636,7 @@ input[type='checkbox']:checked.autofilter, .jsdialog input[type='checkbox']:chec
 	border: none;
 	height: 18px;
 	width: 20px;
+	display: block;
 }
 
 .jsdialog .radiobutton > label {
